--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,13 @@ authors = ["Giorgi Nikolaishvili <gnikolai@uoregon.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
+PDMatsExtras = "2c7acb1b-7338-470f-b38f-951d2bcb9193"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ShiftedArrays = "1277b4bf-5013-50f5-be3d-901d8477a67a"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [compat]
