--- a/Project.toml
+++ b/Project.toml
@@ -11,16 +11,17 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PDMatsExtras = "2c7acb1b-7338-470f-b38f-951d2bcb9193"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ShiftedArrays = "1277b4bf-5013-50f5-be3d-901d8477a67a"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [compat]
 Distributions = "0.25"
-PDMatsExtras = "2"
-DocumenterTools = "0.1"
 Documenter = "0.27"
+DocumenterTools = "0.1"
 PDMats = "0.11"
+PDMatsExtras = "2"
 Parameters = "0.12"
 ShiftedArrays = "1"
 StatsPlots = "0.14"
