--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ DocumenterTools = "0.1"
 PDMats = "0.11"
 PDMatsExtras = "2"
 Parameters = "0.12"
+Polynomials = "2"
 ShiftedArrays = "1"
 StatsPlots = "0.14"
 julia = "1"
