CompatHelper: add new compat entry for Kronecker at version 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Distributions = "0.25"
 Documenter = "0.27"
 DocumenterTools = "0.1"
+Kronecker = "0.5"
 PDMats = "0.11"
 PDMatsExtras = "2"
 Parameters = "0.12"
